--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,13 +1,17 @@
 html {
-	max-height: 95vh;
+	height: 98%;
+}
+
+body {
+	height: 98%;
 }
 
 #content {
-	min-height: 95vh;
+	width: 100%;
+	height: 98%;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
-	align-items: center;
+	flex-direction: column
 }
 
 #sentence {
@@ -16,7 +20,6 @@ html {
 	font-family: arial, sans-serif;
 	font-weight: 600;
 	text-align: center;
-	width: 95%;
 }
 
 #day {
